welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:5: error: type mismatch;
 found   : Unit
 required: Int
	if (a==b) { return 0}
        ^