welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if ( Math.abs(10-a)> Math.abs(10-b))
	{return b}
	if (Math.abs(10-a)< Math.abs(10-b)) {return a}
	if (a==b) { return 0}
}
